fluxcd/catalog/monitoring/alert-manager/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: alertmanager
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: alertmanager-operated
                port:
                  number: 9093
            path: /monitoring/alertmanager(/|$)(.*)
            pathType: ImplementationSpecific
